# solver_horario

./: Asignatura.cpp  Asignatura.h  CMakeLists.txt  LICENSE  Makefile  Menu.cpp  Menu.h  Paralelo.cpp  Paralelo.h  README.md  Registro.cpp  Registro.h  Sesion.h  Solucion.cpp  Solucion.h  Solver.cpp  Solver.h  Tabla.cpp  Tabla.h  Utilidades.cpp  Utilidades.h  main.cpp
